WIP: fixing close button overflow.

--- a/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
+++ b/assets/js/apps/search/components/PreviewCard/EntryPreviewCard.css
@@ -1,7 +1,8 @@
 .preview-card__close {
-    /* position: absolute; */
-    /* right: 5%; */
-    /* top: 5%; */
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    border: 2px solid black;
 }
 
 .preview-card__close button {
@@ -11,7 +12,8 @@
 	padding: 0;
 	font: inherit;
 	cursor: pointer;
-	outline: inherit;
+    outline: inherit;
+    background-color: greenyellow;
 }
 
 .preview-card__body {
@@ -21,7 +23,7 @@
     border-width: 1px;
     border-color: #A6A3A3;
     border-radius: 3px;
-    /* width: 300px; */
+    width: 300px;
 }
 
 .preview-card__body > * {
